# MultiCursor

./: CMakeLists.txt  CMakePresets.json  manifest.xml
Tests/: AppStateMachineTest.cpp  CMakeLists.txt  EventBusTest.cpp  InputManagerTest.cpp  SettingsManagerTest.cpp  minitest.h  test_main.cpp
docs/: ARCHITECTURE.md  SETUP.md
resources/: MultiCursorDev.pfx  app.manifest  app.rc
src/: CMakeLists.txt  main.cpp
src/Core/: AppStateMachine.cpp  AppStateMachine.h  ClickForwarder.cpp  ClickForwarder.h  CursorManager.cpp  CursorManager.h  DeviceManager.cpp  DeviceManager.h  EventBus.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  ProfileManager.cpp  ProfileManager.h  SettingsManager.cpp  SettingsManager.h  Types.h
src/Platform/: DeviceEnumerator.cpp  DeviceEnumerator.h  MonitorManager.cpp  MonitorManager.h  RawInputHandler.cpp  RawInputHandler.h  WindowManager.cpp  WindowManager.h  WindowsSettings.cpp  WindowsSettings.h
src/Rendering/: ClickEffects.cpp  ClickEffects.h  CursorRenderer.cpp  CursorRenderer.h  Direct2DRenderer.cpp  Direct2DRenderer.h  OverlayRenderer.cpp  OverlayRenderer.h
src/UI/: MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  TrayManager.cpp  TrayManager.h
